--- a/quiz-api/requirements.txt
+++ b/quiz-api/requirements.txt
@@ -9,6 +9,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 pycodestyle==2.11.1
+PyJWT==2.5.0
 toml==0.10.2
 Werkzeug==3.0.3
 zipp==3.10.0
