--- a/quiz-api/requirements.txt
+++ b/quiz-api/requirements.txt
@@ -1,15 +1,8 @@
-autopep8==2.1.2
 blinker==1.8.2
 click==8.1.7
-colorama==0.4.6
 Flask==3.0.3
-Flask-Cors==4.0.1
-importlib-metadata==5.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
-pycodestyle==2.11.1
-PyJWT==2.5.0
-toml==0.10.2
 Werkzeug==3.0.3
-zipp==3.10.0
+flask_cors==4.0.1
