--- a/quiz-api/requirements.txt
+++ b/quiz-api/requirements.txt
@@ -1,8 +1,15 @@
 blinker==1.8.2
+cffi==1.16.0
 click==8.1.7
+cryptography==42.0.7
 Flask==3.0.3
+Flask-Cors==4.0.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jwt==1.3.1
 MarkupSafe==2.1.5
+pillow==10.3.0
+pycparser==2.22
+Pygments==2.18.0
+PyJWT==2.8.0
 Werkzeug==3.0.3
-flask_cors==4.0.1
