--- a/quiz-ui/package.json
+++ b/quiz-ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "highlight.js": "^11.9.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
